# plugin-template

./: .gitignore  Cargo.toml  Makefile  README.md  plugin.toml  run.sh
.github/workflows/: ci.yml  lint.yml  release.yml  version.yml
src/: main.rs
src/platform/: linux.rs  macos.rs  mod.rs
